--- a/syd/Makefile.am
+++ b/syd/Makefile.am
@@ -41,6 +41,7 @@ libsyd_@LIBSYD_PC_SLOT@_la_SOURCES = \
 	file.c \
 	pidfd.c \
 	proc.c \
+	strlcpy.c \
 	state.c \
 	time.c \
 	unshare.c
@@ -83,12 +84,16 @@ libsyd_include_HEADERS= \
 			syd.h
 
 noinst_HEADERS= seatest.h check.h compiler.h
-syd_check_SOURCES= seatest.c check.c file-TEST.c proc-TEST.c
+syd_check_SOURCES= \
+		   file.c \
+		   proc.c \
+		   strlcpy.c \
+		   seatest.c \
+		   check.c \
+		   file-TEST.c \
+		   proc-TEST.c
 syd_check_CFLAGS= -I$(srcdir)
-syd_check_LDFLAGS= -lrt -lm \
-		   $(builddir)/libsyd_@LIBSYD_PC_SLOT@.la
-		   -L$(builddir)/.libs \
-		   -lsyd_@LIBSYD_PC_SLOT@
+syd_check_LDFLAGS= -lrt -lm $(libseccomp_LIBS)
 
 check_PROGRAMS= check-pause syd-check
 TESTS= syd-check
