add HELPME.h, install it under docdir, use it commonly, make syd a multicall binary
Signed-off-by: Ⓐlï P☮latel <alip@exherbo.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -30,6 +30,7 @@ EXTRA_DIST+= $(PANDORA_EXTRA_DIST)
 dist_doc_DATA= \
 	       BUGS \
 	       COPYING \
+	       HELPME.h \
 	       LICENSE \
 	       LICENSE.psyscall \
 	       LICENSE.sinit \
