libsyd: make linker export the new global functions
Signed-off-by: Ⓐlï P☮latel <alip@exherbo.org>

--- a/syd/libsyd.ld.in
+++ b/syd/libsyd.ld.in
@@ -1,15 +1,125 @@
 libsyd_@LIBSYD_PC_SLOT@ {
 global:
 	/* sc_map.h */
+	sc_map_dec_strkey;
+	sc_map_dec_scalar;
+	sc_map_of;
+	sc_map_found;
+	sc_map_oom;
+	sc_map_foreach;
+	sc_map_foreach_value;
+	sc_map_cmp_32;
+	sc_map_assign_32;
+	sc_map_hashof_32;
+	sc_map_hash_32;
+	sc_map_alloc_32;
+	sc_map_remap_32;
+	sc_map_size_32;
+	sc_map_32;
+	sc_map_init_32;
+	sc_map_term_32;
+	sc_map_clear_32;
+	sc_map_put_32;
+	sc_map_get_32;
+	sc_map_del_32;
+	sc_map_size_32;
+	sc_map_cmp_64;
+	sc_map_assign_64;
+	sc_map_hashof_64;
+	sc_map_hash_64;
+	sc_map_alloc_64;
+	sc_map_remap_64;
+	sc_map_size_64;
+	sc_map_64;
+	sc_map_init_64;
+	sc_map_term_64;
+	sc_map_clear_64;
+	sc_map_put_64;
+	sc_map_get_64;
+	sc_map_del_64;
+	sc_map_cmp_64s;
+	sc_map_assign_64s;
+	sc_map_hashof_64s;
+	sc_map_hash_64s;
+	sc_map_alloc_64s;
+	sc_map_remap_64s;
+	sc_map_size_64s;
+	sc_map_64s;
+	sc_map_init_64s;
+	sc_map_term_64s;
+	sc_map_clear_64s;
+	sc_map_put_64s;
+	sc_map_get_64s;
+	sc_map_del_64s;
+	sc_map_size_64s;
+	sc_map_cmp_str;
+	sc_map_assign_str;
+	sc_map_hashof_str;
+	sc_map_hash_str;
+	sc_map_alloc_str;
+	sc_map_remap_str;
+	sc_map_size_str;
+	sc_map_str;
+	sc_map_init_str;
+	sc_map_term_str;
+	sc_map_clear_str;
+	sc_map_put_str;
+	sc_map_get_str;
+	sc_map_del_str;
+	sc_map_size_str;
+	sc_map_cmp_sv;
+	sc_map_assign_sv;
+	sc_map_hashof_sv;
+	sc_map_hash_sv;
+	sc_map_alloc_sv;
+	sc_map_remap_sv;
+	sc_map_size_sv;
+	sc_map_sv;
+	sc_map_init_sv;
+	sc_map_term_sv;
+	sc_map_clear_sv;
+	sc_map_put_sv;
+	sc_map_get_sv;
+	sc_map_del_sv;
+	sc_map_size_sv;
+	sc_map_cmp_64;
+	sc_map_assign_64;
+	sc_map_hashof_64;
+	sc_map_hash_64;
+	sc_map_alloc_64;
+	sc_map_remap_64;
+	sc_map_size_64;
+	sc_map_s64;
+	sc_map_init_s64;
+	sc_map_term_s64;
+	sc_map_clear_s64;
+	sc_map_put_s64;
+	sc_map_get_s64;
+	sc_map_del_s64;
+	sc_map_size_s64;
+	sc_map_cmp_64v;
+	sc_map_assign_64v;
+	sc_map_hashof_64v;
+	sc_map_hash_64v;
+	sc_map_alloc_64v;
+	sc_map_remap_64v;
+	sc_map_size_64v;
+	sc_map_64v;
+	sc_map_init_s64v;
+	sc_map_term_s64v;
+	sc_map_clear_s64v;
 	sc_map_get_64v;
 	sc_map_put_64v;
 	sc_map_del_64v;
 	sc_map_init_64v;
 	/* syd.h */
 	syd_about;
+	syd_clone3;
+	syd_clone;
 	syd_debug_get;
 	syd_debug_set;
 	syd_debug_set_fd;
+	syd_execv;
 	syd_name_errno;
 	syd_name_namespace;
 	syd_set_death_sig;
