many many little test fixes
Signed-off-by: Ⓐlï P☮latel <alip@exherbo.org>

--- a/configure.ac
+++ b/configure.ac
@@ -1131,7 +1131,7 @@ AC_CONFIG_FILES([Makefile
 		 man/Makefile
 		 t/Makefile
 		 t/bin-wrappers/Makefile
-		 t/test-bin/Makefile
+		 t/bin/Makefile
 		 t/test-data/Makefile
 		 t/valgrind/Makefile])
 AC_OUTPUT
