autotools: test dirname change
Signed-off-by: Ⓐlï P☮latel <alip@exherbo.org>

--- a/t/bin/Makefile.am
+++ b/t/bin/Makefile.am
@@ -55,7 +55,7 @@ threads_execve_SOURCES= threads_execve.c \
 threads_execve_CFLAGS= $(AM_CFLAGS) $(PTHREAD_CFLAGS)
 threads_execve_LDADD= $(PTHREAD_LIBS)
 
-syddir=$(libexecdir)/$(PACKAGE)/t-$(SYDBOX_API_VERSION)/test-bin
+syddir=$(libexecdir)/$(PACKAGE)/t-$(SYDBOX_API_VERSION)/bin
 syd_SCRIPTS= \
 	syd-bind-auto-unix-socket.py \
 	syd-bind-ipv4-port.py \
